upload/src/main/resources/static/css/style.css
body, html {
	margin: 0 auto;
	height: 100%;
	
	color: #bdc1c6;
}

@font-face {
    font-family: Inkfree;
  	src: url("../font/Inkfree.ttf");
}

.button {
	background-color: #39383D;
	
	color: #bdc1c6;

    font-size: Max(28px, 1em);
    font-family: inherit;
    
    font-variant: small-caps;
    
    padding: 0.1em 0.7em 0.3em;
    
    border: 2px solid var(--input-border);
    border-radius: 4px;
    
    transition: background-color 0.3s, color 0.3s;
}

.button:active {
	outline: none;
    transform: translateY(2px);
}

.button:hover, .textbox:hover {
	background-color: #BA3B46; 
	color: #FFFFFF;
}

.textbox {
	background-color: #39383D;

    font-size: Max(28px, 1em);
    font-family: inherit;
    
    color: #bdc1c6;
    
    padding: 0.1em 0.55em 0.3em;
    
    width: 10em;
    
    text-align: center; 
    
    border: 2px solid var(--input-border);
    border-radius: 4px;
    
    transition: background-color 0.3s, color 0.3s;
}

.textbox:focus {
	outline: none;
	background-color: #262528; 
	
	color: #FFFFFF;
}

hr {
    display: block;
    
    height: 1px;
    
    border: 0;
    border-top: 1px solid #bdc1c6;
    
    margin: 1em 0.075em;   

	width: 100%;
    
    padding: 0;
}

#joinSession {
	margin-left: 0.2em;
}

.logo {
	margin-top: 5em;
	padding: 5.5em 0em 0 0;
	
	background-size: contain;
	background-repeat: no-repeat;
	background-image: url("../img/logo.png");
}

.wrapper {
	display: flex;
	align-items: center;
	flex-direction: column; 
	justify-content: center;
	width: 100%;
	min-height: 80%;
}

.formContent {
	width: 100%;
	max-width: 500px;
	position: relative;
	text-align: center;
}

.about {
	margin-top: 3em;
	padding: 20px 25px;
	
	font-variant: normal;
	
	background-color: #39383D;
	
	width: 100%;
	
	border-radius: 4px;
}	

#uploadedFiles {
	padding: 20px 25px;
	
	font-variant: normal;
	
	background-color: #39383D;
	
	width: 100%;
	
	border-radius: 4px;
}	

.footer {      
    width: 100%;
    height: 3.5%;
    
    padding: 0.2em;    
    padding-bottom: 2em;
    
    text-align: center;
    
    margin-left: -4em;
}

.footer li {
	float: left;
	    
	font-size: 20px;
	
	padding-left: 2em;
}

.footer i {
	font-size: 30px;
	vertical-align: middle;
}

.footer ul {
	list-style-type: none;
}

.footer li {
	display: inline;
}

.fa-linkedin:hover {
	color: #0077B5;
}

.fa-facebook:hover {
	color: #4867AA;
}


.fa-twitter:hover {
	color: #5DA9DD;
}

.fa-github:hover {
	color: #FFFFFF;
}

.tinfiolic:hover {
	animation: animate-color 5s forwards; 
	animation-iteration-count: infinite;
}

@keyframes animate-color {
  0%   { color: #BA3B46; }
  30%   { color: #FFFFFF; }
  60% { color: #5DA9DD; }
  90%   { color: #FFFFFF; }
  100%   { color: #BA3B46; }
}

a { 
	color: inherit; 
}

a:link {
    text-decoration: none;
    color: inherit; 
}

a:visited {
    text-decoration: none;
    color: inherit; 
}

a:hover {
    text-decoration: none;
    color: inherit; 
}

a:active {
    text-decoration: none;
    color: inherit; 
}

#timer {
	font-size: 45px; 
	font-weight: bold;
		
	color: #BA3B46;
}

#dropzoneForm {
	margin-top: 1em;
	
	height: 6em;
	width: 100%;
	
	background-color: #39383D;
	border: 2px dashed #9A9DA1;
	
    border-radius: 4px;
    
    white-space: nowrap;
    
    background-size: contain;
	background-repeat: no-repeat;
	background-image: url("../img/dropZone.png");
}

#dropzoneForm:hover {
	border: 2px dashed #B95C2D;
	box-shadow: inset 0 0 10px #000000;
	opacity: 0.7;
}

#dropFiles {
	color: #39383D;
	padding-left: 12em;
}

input[type="file"] {
    display: none;
}

#uploadedText {
	width: 100%;
	height: 5em;
	
	resize: none;
	
	background-color: #39383D;

    font-size: Max(16px, 1em);
    font-family: inherit;
    
    padding: 0.4em;
        
    color: #bdc1c6;
    
    border: 2px solid var(--input-border);
    border-radius: 4px;
    
    transition: background-color 0.3s, color 0.3s;
}

#uploadedText:focus {
	outline: none;
	
	background-color: #262528; 	
	color: #FFFFFF;
}

#uploadedText:hover {
	background-color: #262528;
	color: #FFFFFF;
}

.charCounter {
	float: right;
	font-size: 12px;
}

.column {
  float: left;
  width: 50%;
}

.codeAndQR:after {
  content: "";
  display: table;
  clear: both;
}

#code {
	font-size: 60px;
	font-weight: bold;
	
	color: #BA3B46;
}

.codeArea {
	margin-top: -0.5em;
}

.dz-max-files-reached, .dz-message { 
	display: none;
}

#poppupMessageContainer {
	position: absolute;
	top: 0em;
	left: 75%;
	
	width: 25%;
}

.poppupMessage {
	padding: 1em;
	
	margin-top: 0.5em;
	margin-bottom: 0.5em;
	
	color: #fff;
	
	border-radius: 5px;
}

.fa-file {
	font-size: 42px;
}

.fileIcon {
	display: inline-block; 
	padding: 0.5em;
}

.fileIcon:hover {
	text-shadow: 0 0 1px #fff, 0 0 1px #fff, 0 0 1px #BD5D2D, 0 0 5px #BA3B46, 0 0 6px #BA3B46, 0 0 7px #BA3B46, 0 0 8px #BA3B46;
}

sup { 
	vertical-align: top;
	font-size: 24px;
	
	color: #BA3B46;
}

sup:hover {
	text-shadow: 0 0 1px #fff, 0 0 1px #fff, 0 0 1px #BA3B46, 0 0 5px #BA3B46, 0 0 6px #BA3B46, 0 0 7px #BA3B46, 0 0 8px #BA3B46
}

.fileSizeAndCount {
	float: right;
	font-size: 12px;
}

